app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require bootstrap.min
 */

html {
	padding-left: 130px;
	padding-top: 100px;
	padding-right: 130px;
	padding-bottom: 100px;
}

body {
	background-color: F2FDF7;
/*	background-image: url(../images/light_grey.png);*/
} 

.instructions {
	font-style: italic;
}

.new_flight_form,  {
	padding: 10px;
}

.add_contact_form {
	padding-top: 10px;
	padding-bottom: 10px;
}

.navbar-fixed-bottom {
	opacity: 50%;
}

.contact_submit {
	padding-bottom: 40px;
}

.form_field {
	border-radius: 5px;
}

